BACKLOG-17368: Fix left alignment of objects (#536)
* BACKLOG-17368: Fix left alignment of objects

* Fix css override without 'important'

--- a/src/javascript/JContent/actions/editImage/ImageEditorDialog/ImageEditorDialog.scss
+++ b/src/javascript/JContent/actions/editImage/ImageEditorDialog/ImageEditorDialog.scss
@@ -41,3 +41,7 @@
 .actions.actions {
     border-top: 1px solid  var(--color-gray40);
 }
+
+.twoCols.twoCols {
+    padding: 24px 24px 0 0;
+}
